# filess

./: Cargo.toml  README.md
src/: audio_file.rs  dir.rs  errors.rs  file_base.rs  file_macros.rs  file_type_macros.rs  file_types.rs  fs_handler.rs  image_file.rs  lib.rs  macros.rs  model_file.rs  open_integration.rs  primitives.rs  temporary.rs  traits.rs  util_macros.rs
src/files/: audio_file.rs  file.rs  image.rs  json.rs  md.rs  mod.rs  toml.rs
src/files/audio/: aiff.rs  alac.rs  flac.rs  mkv.rs  mod.rs  mp1.rs  mp2.rs  mp3.rs  mp4.rs  mpa.rs  ogg.rs  wav.rs
src/files/images/: avif.rs  bmp.rs  exr.rs  ff.rs  gif.rs  hdr.rs  ico.rs  jpeg.rs  mod.rs  png.rs  pnm.rs  qoi.rs  tga.rs  tiff.rs  webp.rs
src/files/text/: json.rs  md.rs  mod.rs  toml.rs  txt.rs
tests/: test.rs
