[package]
name = "filess"
version = "0.4.1"
edition = "2024"
description = "Simplified file management"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "deref", "deref_mut", "debug", "as_ref", "into_iterator"] }
image = { version = "0.25.9", optional = true, default-features = false }
rodio = { version = "0.22.1", default-features = false, optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
serde_toml = { package = "toml", version = "0.9.11", optional = true, features = ["fast_hash"] }
symphonia = { version = "0.5.5", optional = true, default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["fs", "parking_lot"], optional = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["all-files", "rayon"]
# default = ["serde", "image", "async", "all-files", "rayon", "symphonia-simd", "rodio"]
# default = ["serde", "image", "async", "rayon", "symphonia-simd", "rodio"]

all-files = ["all-text", "all-images", "all-audio"]
all-text = ["json", "toml", "md", "txt"]
all-images = ["jpeg", "png", "webp", "avif", "tiff", "gif", "bmp", "exr", "ff", "hdr", "ico", "pnm", "qoi", "tga"]
all-audio = ["ogg", "mkv", "wav", "aiff", "flac", "mp4", "mp3", "mp2", "mp1", "mpa", "alac"]

json = ["_any_text", "_any_model", "dep:serde_json"]
toml = ["_any_text", "_any_model", "dep:serde_toml"]
md = ["_any_text"]
txt = ["_any_text"]

jpeg = ["_any_image", "image?/jpeg"]
png = ["_any_image", "image?/png"]
webp = ["_any_image", "image?/webp"]
avif = ["_any_image", "image?/avif"]
tiff = ["_any_image", "image?/tiff"]
gif = ["_any_image", "image?/gif"]
bmp = ["_any_image", "image?/bmp"]
exr = ["_any_image", "image?/exr"]
ff = ["_any_image", "image?/ff"]
hdr = ["_any_image", "image?/hdr"]
ico = ["_any_image", "image?/ico"]
pnm = ["_any_image", "image?/pnm"]
qoi = ["_any_image", "image?/qoi"]
tga = ["_any_image", "image?/tga"]

# TODO: might need to refactor, change to specific symphonia flags
ogg = ["_any_audio", "symphonia?/ogg", "symphonia?/vorbis", "symphonia?/flac", "symphonia?/pcm"]
mkv = [
    "_any_audio",
    "symphonia?/mkv",
    "symphonia?/vorbis",
    "symphonia?/flac",
    "symphonia?/pcm",
    "symphonia?/mp3",
    "symphonia?/aac"
]
wav = ["_any_audio", "symphonia?/wav", "symphonia?/pcm"]
aiff = ["_any_audio", "symphonia?/aiff", "symphonia?/pcm"]
flac = ["_any_audio", "symphonia?/flac"]
mp4 = ["_any_audio", "symphonia?/isomp4", "symphonia?/aac", "symphonia?/alac", "symphonia?/mp3"]
mp3 = ["_any_audio", "symphonia?/mp3"]
mp2 = ["_any_audio", "symphonia?/mp2"]
mp1 = ["_any_audio", "symphonia?/mp1"]
mpa = ["_any_audio", "symphonia?/mpa", "symphonia?/mp3"]
alac = ["_any_audio", "symphonia?/caf", "symphonia?/alac", "symphonia?/isomp4"]

_any_text = []
_any_model = []
_any_image = []
_any_audio = []

serde = ["dep:serde", "image?/serde"]
image = ["dep:image"]
image-nasm = ["image", "image/nasm"]
rayon = ["image?/rayon"]
async = ["dep:tokio"]
audio = ["dep:symphonia"]
symphonia-simd = ["audio", "symphonia/opt-simd"]
rodio = ["audio", "dep:rodio"]
